Tried solution to fix scroll behavior on mobile

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -2,11 +2,15 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
 body {
   font-family: sans-serif;
   margin: 0;
   background: #efd6d2;
   font-family: 'Nunito', sans-serif;
+  height: 100%;
 }
 
 button,
