--- a/src/scss/components/_main-grid.scss
+++ b/src/scss/components/_main-grid.scss
@@ -1,6 +1,6 @@
 .main__grid {
   display: grid;
-  grid-template-rows: 48px auto 48px;
+  grid-template-rows: 60px auto 48px;
   max-width: 500px;
   height: 100vh;
   position: fixed;
